--- a/layouts/index.html
+++ b/layouts/index.html
@@ -10,7 +10,7 @@
         <article class="card my-2">
           <img src="{{$p.Params.imglink}}" class="card-img-top">
           <div class="card-body">
-            <a href="{{$p.Permalink}}" class="text-reset text-decoration-none">
+            <a href="{{$p.Permalink}}" class="text-reset text-decoration-none stretched-link">
               <h3 class="card-title text-center"><em>{{ $p.Title }}</em></h3>
               <p class="card-text">{{$p.Summary}}</p>
             </a>
