--- a/layouts/shortcodes/ephemerides.html
+++ b/layouts/shortcodes/ephemerides.html
@@ -2,7 +2,7 @@
   {{ range $info.trimestre }}
     <div class="row mb-3">
       <h3>{{.title}}</h3>
-      <table class="table">
+      <table class="table" id="ephemerides">
         <tbody>
           {{ range .ephemeride }}
           <tr>
