--- a/layouts/archives/list.html
+++ b/layouts/archives/list.html
@@ -10,7 +10,7 @@
         <h3>{{.Key}}</h3>
         <ul>
           {{range .Pages.ByPublishDate.Reverse}}
-          <li><span>{{.PublishDate.Format "02/01"}}</span> &#8212; <a href="{{.Permalink}}" class="text-decoration-none">{{.Title}}</a></li>
+          <li><span>{{.PublishDate.Format "02-01"}}</span> &#8212; <a href="{{.Permalink}}" class="text-decoration-none">{{.Title}}</a></li>
           {{end}}
         </ul>
       {{end}}
