--- a/layouts/infos/ephemerides.html
+++ b/layouts/infos/ephemerides.html
@@ -4,7 +4,7 @@
   <h1 class="h3">{{.Title}}</h1>
 </header>
 
-{{$info := .Resources.GetMatch "list.toml" | transform.Unmarshal}}
+{{$info := $.Site.Data.ephemerides}}
 {{range $info.trimestre}}
   <div class="row mb-3">
     <h3>{{.title}}</h3>
