--- a/static/css/base.css
+++ b/static/css/base.css
@@ -44,6 +44,10 @@ h4:first-letter, h5:first-letter, h6:first-letter,
   background-position: center;
 }
 
+#related-infos {
+  z-index: 100!important;
+}
+
 .btn-tag, .btn-outline-tag:hover {
   background-color: #ebb951 !important;
   color: #ffffff !important;
