--- a/static/css/base.css
+++ b/static/css/base.css
@@ -48,6 +48,10 @@ h4:first-letter, h5:first-letter, h6:first-letter,
   z-index: 100!important;
 }
 
+.summaries>p:after{
+  content: "...";
+}
+
 .btn-tag, .btn-outline-tag:hover {
   background-color: #ebb951 !important;
   color: #ffffff !important;
