--- a/layouts/partials/nav.html
+++ b/layouts/partials/nav.html
@@ -1,5 +1,5 @@
 {{ $curr := .}}
-<nav class="navbar navbar-expand-lg navbar-light bg-light border-bottom p-1">
+<nav class="navbar sticky-top navbar-expand-lg navbar-light bg-light border-bottom p-1">
   <div class="container">
     <a class="navbar-brand" href="{{.Site.Home.Permalink}}">
       <img src="/images/logo.png" alt="" width="25" height="30" class="d-inline-block align-text-top" style="position:relative; top:-5px">
