--- a/layouts/partials/article.html
+++ b/layouts/partials/article.html
@@ -11,7 +11,7 @@
 	<div class="row d-flex justify-content-center align-items-center image-screen">
   	{{ range . }}
       <div class="col">
-		    <img src="{{ .RelPermalink }}" class="img-thumbnail enlarge mx-2">
+		    <img src="{{ .RelPermalink }}" class="img-thumbnail mx-2">
       </div>
   	{{ end }}
 	</div>
