--- a/layouts/infos/ephemerides.html
+++ b/layouts/infos/ephemerides.html
@@ -27,7 +27,7 @@
         <option value="école">école</option>
         <option value="loisir">loisir</option>
         <option value="sport">sport</option>
-        <option value="évenement">évenement</option>
+        <option value="événement">événement</option>
         <option value="vacances">vacances</option>
       </select>
     </div>
